mattermost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
spec:
  selector:
    io.kompose.service: mattermost
  ports:
    - name: main
      port: 8065
      targetPort: 8065
